# cpp-computer-graphics

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  docker-compose.yml
assets/: .gitignore
assets/shaders/source/: default.frag  default.geom  default.vert
cmake/: AddHelperFunctions.cmake  AddShader.cmake
exe/: CMakeLists.txt
exe/assets/models/ring/: ring.mtl
exe/assets/shaders/source/: default.geom  default.glsl.frag  default.glsl.geom  default.glsl.vert  default.vert.glsl
exe/include/: main_application.hpp
exe/src/: main.cpp  main_application.cpp
glad_include/: vk_platform.h
glad_include/glad/: gl.h  vulkan.h
include/: application.hpp  application_t.hpp  base_application.hpp  binding_definitions.hpp  input_description.hpp  logger.hpp  shader.hpp  shader_input.hpp  singleton.hpp  singleton_t.hpp
include/assets/: stb_image.h
scripts/: main.py
scripts/spirv_reflect/: spirv_enums.py  spirv_reflect.py  spirv_reflect_build.py  spirv_reflect_def.h
src/: main.cpp
src/general/: application.cpp  application_t.cpp  argument.cpp  base_application.cpp  logger.cpp
src/general/texture/: image.cpp  shader.cpp
src/opengl/: application.cpp  application_t.cpp  base_application.cpp  opengl_application.cpp  shader.cpp
src/opengl/glad/: gl.c
src/vulkan/: application.cpp  application_t.cpp  base_application.cpp  shader.cpp  vulkan_application.cpp  vulkan_shader.cpp
src/vulkan/glad/: vulkan.c
utils/include/: spirv_reflect.h  vk_platform.h
utils/include/glad/: gl.h  vulkan.h
utils/src/: gl.c  image.cpp  vulkan.c
